k8s-resource-manifests/registry/statefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: registry
  namespace: sodalite-services
spec:
  serviceName: registry
  selector:
    matchLabels:
      app: registry
  replicas: 1
  template:
    metadata:
      labels:
        app: registry
    spec:
      containers:
      - image: library/registry:2
        name: registry
        ports:
        - containerPort: 4430
          protocol: TCP
        volumeMounts:
        - name: registry-storage
          mountPath: /var/lib/registry
        volumeMounts:
        - name: certificates
          mountPath: /opt/certs
      volumes:
      - name: certificates
        emptyDir: {}
  volumeClaimTemplates:
  - metadata:
      name: registry-storage
      namespace: sodalite-services
    spec:
      accessModes: [ ReadWriteOnce ]
      resources:
        requests:
          storage: 10Gi
