k8s-resource-manifests/registry/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: registry
  namespace: sodalite-services
spec:
  selector:
    app: registry
  ports:
  - port: 4430
    protocol: TCP
    name: websecure
